# enumIsNotEnough

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  Doxyfile  GETTING_STARTED.md  Listing_1_An_ideal_situation  Listing_2_A_real-world_situation.cpp  Listing_3_A_Class_Template.cpp  Listing_4_simple_test_driver.cpp  Listing_5_Generalized_Enm_Class.cpp  Listing_6_Test_Program  README.md  README_original.md  Test_Enum.cpp  Test_Enum.hpp  Test_Enum_String.cpp  Test_Enum_String.hpp  Test_Enum_String_Main.cpp  Test_Template_Enum.hpp  enumIsEnough.hpp  enumSimple.hpp  main.cpp  test_enoughEnum.cpp  test_enoughEnum.hpp
Listings/: Listing_2_A_real-world_situation.cpp
examples/: CMakeLists.txt  enum_int.cpp  enum_int.hpp  enum_int_main.cpp  enum_string.cpp  enum_string.hpp  enum_string_main.cpp
pages/: design_patterns.md  implementation_guide.md  quick_reference.md
